--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1498,7 +1498,7 @@ jobs:
       run: |
         choco install gcc-arm-embedded -y
 
-            # 32. Create Pure ARM Compiler (Bare Metal) - Simplest Logic
+                # 32. Create Pure ARM Compiler (Bare Metal) - Indent-Free Logic
     - name: 32. Create Pure ARM Compiler
       run: |
         cat <<'EOF' > compiler_arm.py1
@@ -1525,6 +1525,7 @@ jobs:
         @v 循 'while'
         @v 入 'in'
         @v 或 'elif'
+        @v 続 'continue'
 
         # Opcodes
         @v 置 '"MOV"'
@@ -1576,7 +1577,7 @@ jobs:
         @v 幅 'size'
         @v 無 '""'
         @v モ '"r"'
-        @v 権 '"utf-8"'
+        @v 権 '"utf-8-sig"' # Handle BOM
 
         $
         実(込)
@@ -1599,28 +1600,40 @@ jobs:
          出 = 無
 
          も 寸(線) == 0:
-           0
+           順 = 順 + 1
+           続
          も 線.始(井):
-           0
+           順 = 順 + 1
+           続
 
-         或 技 == 置:
+         # MOV Logic (Flat)
+         も 技 == 置:
           先 = 部[1]
           元 = 部[2]
           も 先 == "RAX":
            先 = 蓄
           
-          # Logic without deep nesting
-          も 元 == "RAX":
-           元 = 蓄
-           出 = 幕 + 転 + 先 + 点 + 元
-          或 寸(元) > 2:
+          # Check Immediate size
+          も 寸(元) > 2:
            # Large Immediate
-           出 = 幕 + 載 + 先 + 点 + 等 + 元
+           も 元.数():
+             出 = 幕 + 載 + 先 + 点 + 等 + 元
+           他:
+             # Register Move (RAX)
+             も 元 == "RAX":
+              元 = 蓄
+             出 = 幕 + 転 + 先 + 点 + 元
           他:
-           # Small Immediate
-           出 = 幕 + 転 + 先 + 点 + 井 + 元
+           # Small Immediate or Reg
+           も 元.数():
+             出 = 幕 + 転 + 先 + 点 + 井 + 元
+           他:
+             も 元 == "RAX":
+              元 = 蓄
+             出 = 幕 + 転 + 先 + 点 + 元
 
-         或 技 == 書:
+         # WRITE Logic
+         も 技 == 書:
           先 = 部[1]
           元 = 部[2]
           幅 = 部[3]
@@ -1629,11 +1642,13 @@ jobs:
           表(幕 + 載 + 弐 + 点 + 等 + 先)
           出 = 幕 + 記 + 元 + 点 + 角 + 弐 + 閉
 
-         或 技 == 呼:
+         # CALL Logic
+         も 技 == 呼:
           先 = 部[1]
           出 = 幕 + 枝 + 先
 
-         或 技 == 帰:
+         # RET Logic
+         も 技 == 帰:
           出 = 幕 + "bx lr"
 
          も 寸(出) > 0:
@@ -1649,3 +1664,4 @@ jobs:
         
         echo "--- Generated Code Check ---"
         head -n 20 compiler_arm.py
+
